--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ owner: Federico Zivolo & contributors # or company name
 first_published: 2016 # if migrating another site, the year of your first publish
 email: federico.zivolo@gmail.com
 baseurl: "/popper.js" # the subpath of your site, e.g. /blog
-url: "https://fezvrasta.github.io" # the base hostname & protocol for your site
+url: "https://popper.js.org" # the base hostname & protocol for your site
 github: https://github.com/FezVrasta/popper.js
 social:
   twitter: https://twitter.com/FezVr4sta
