--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: A kickass library<br> used to create poppers in web applications
 owner: Federico Zivolo & contributors # or company name
 first_published: 2016 # if migrating another site, the year of your first publish
 email: federico.zivolo@gmail.com
-baseurl: "/popper.js" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://popper.js.org" # the base hostname & protocol for your site
 github: https://github.com/FezVrasta/popper.js
 social:
